src/rvsdg/snapshots/eggcc__rvsdg__rvsdg2svg__diamond_rvsdg_svg.snap
---
source: src/rvsdg/rvsdg2svg.rs
expression: svg
---
<svg
	height="450"
	version="1.1"
	width="425"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="450"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="425">
		</rect>
		<g>
			<path
				d="M 141.66667 0V 10Q 141.66667 20 131.66667 20H 93.33333Q 83.33333 20 83.33333 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 141.66667 0V 10Q 141.66667 20 131.66667 20H 126.666664Q 116.666664 20 116.666664 30V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 283.33334 0V 20Q 283.33334 30 293.33334 30H 306.66666Q 316.66666 30 316.66666 40V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 165Q 100 175 110 175H 248.33334Q 258.33334 175 258.33334 185V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 287.5 400V 415Q 287.5 425 277.5 425H 222.5Q 212.5 425 212.5 435V 450"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						lt
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 200)">
				<rect
					fill="#80FF80"
					height="200"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="175">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					match
				</text>
				<g>
					<g
						transform="translate(25, 125)">
						<rect
							fill="white"
							height="50"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="50">
						</rect>
						<g>
							<path
								d="M 25 0V 15Q 25 25 25 25H 25Q 25 25 25 35V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
						</g>
						<g>
							<circle
								cx="25"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="25"
								cy="50"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="100">
						0
					</text>
				</g>
				<g>
					<g
						transform="translate(100, 125)">
						<rect
							fill="white"
							height="50"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="50">
						</rect>
						<g>
							<path
								d="M 25 0V 15Q 25 25 25 25H 25Q 25 25 25 35V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
						</g>
						<g>
							<circle
								cx="25"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="25"
								cy="50"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="125"
						y="100">
						1
					</text>
				</g>
				<circle
					cx="58.333332"
					cy="0"
					fill="black"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="116.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="87.5"
					cy="200"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="141.66667"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
			<circle
				cx="283.33334"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="212.5"
				cy="450"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

