src/rvsdg/snapshots/eggcc__rvsdg__rvsdg2svg__fib_shape_rvsdg_svg.snap
---
source: src/rvsdg/rvsdg2svg.rs
expression: svg
---
<svg
	height="1100"
	version="1.1"
	width="1475"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="1100"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="1475">
		</rect>
		<g>
			<path
				d="M 491.66666 0V 10Q 491.66666 20 501.66666 20H 1021.25Q 1031.25 20 1031.25 30V 200"
				fill="transparent"
				stroke="ForestGreen"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 983.3333 0V 20Q 983.3333 30 993.3333 30H 1381.6666Q 1391.6666 30 1391.6666 40V 950"
				fill="transparent"
				stroke="Maroon"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 170Q 100 180 110 180H 802.5Q 812.5 180 812.5 190V 200"
				fill="transparent"
				stroke="SlateBlue"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 250 150V 160Q 250 170 260 170H 583.75Q 593.75 170 593.75 180V 200"
				fill="transparent"
				stroke="Teal"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 725 900V 907.5Q 725 917.5 735 917.5H 1348.3334Q 1358.3334 917.5 1358.3334 927.5V 950"
				fill="transparent"
				stroke="Teal"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1375 1050V 1065Q 1375 1075 1365 1075H 747.5Q 737.5 1075 737.5 1085V 1100"
				fill="transparent"
				stroke="ForestGreen"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						1
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						0
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(350, 200)">
				<rect
					fill="#FF8080"
					height="700"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="925">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					loop
				</text>
				<g
					transform="translate(25, 75)">
					<rect
						fill="white"
						height="600"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="875">
					</rect>
					<g>
						<path
							d="M 218.75 0V 7.5Q 218.75 17.5 208.75 17.5H 93.33333Q 83.33333 17.5 83.33333 27.5V 50"
							fill="transparent"
							stroke="Teal"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 218.75 0V 7.5Q 218.75 17.5 228.75 17.5H 502.5Q 512.5 17.5 512.5 27.5V 200"
							fill="transparent"
							stroke="Teal"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 437.5 0V 15Q 437.5 25 447.5 25H 658.75Q 668.75 25 668.75 35V 200"
							fill="transparent"
							stroke="SlateBlue"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 656.25 0V 574Q 656.25 584 666.25 584H 690Q 700 584 700 594V 600"
							fill="transparent"
							stroke="ForestGreen"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 656.25 0V 22.5Q 656.25 32.5 646.25 32.5H 126.666664Q 116.666664 32.5 116.666664 42.5V 50"
							fill="transparent"
							stroke="ForestGreen"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 165Q 100 175 110 175H 346.25Q 356.25 175 356.25 185V 200"
							fill="transparent"
							stroke="Teal"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 356.25 550V 562Q 356.25 572 353.125 572H 353.125Q 350 572 350 582V 600"
							fill="transparent"
							stroke="Maroon"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 512.5 550V 556Q 512.5 566 502.5 566H 185Q 175 566 175 576V 600"
							fill="transparent"
							stroke="Crimson"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 668.75 550V 568Q 668.75 578 658.75 578H 535Q 525 578 525 588V 600"
							fill="transparent"
							stroke="Goldenrod"
							stroke-linecap="round"
							stroke-width="2">
						</path>
					</g>
					<g>
						<g
							transform="translate(50, 50)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									lt
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(200, 200)">
							<rect
								fill="#80FF80"
								height="350"
								rx="10"
								stroke="black"
								stroke-width="2"
								width="625">
							</rect>
							<text
								fill="black"
								font-size="50"
								x="25"
								y="50">
								if
							</text>
							<g>
								<g
									transform="translate(25, 125)">
									<rect
										fill="white"
										height="200"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="350">
									</rect>
									<g>
										<path
											d="M 116.666664 0V 10Q 116.666664 20 106.666664 20H 93.33333Q 83.33333 20 83.33333 30V 50"
											fill="transparent"
											stroke="Teal"
											stroke-linecap="round"
											stroke-width="2">
										</path>
										<path
											d="M 233.33333 0V 172.5Q 233.33333 182.5 243.33333 182.5H 252.5Q 262.5 182.5 262.5 192.5V 200"
											fill="transparent"
											stroke="SlateBlue"
											stroke-linecap="round"
											stroke-width="2">
										</path>
										<path
											d="M 233.33333 0V 20Q 233.33333 30 223.33333 30H 126.666664Q 116.666664 30 116.666664 40V 50"
											fill="transparent"
											stroke="SlateBlue"
											stroke-linecap="round"
											stroke-width="2">
										</path>
										<path
											d="M 100 150V 157.5Q 100 167.5 93.75 167.5H 93.75Q 87.5 167.5 87.5 177.5V 200"
											fill="transparent"
											stroke="MediumVioletRed"
											stroke-linecap="round"
											stroke-width="2">
										</path>
										<path
											d="M 250 150V 165Q 250 175 240 175H 185Q 175 175 175 185V 200"
											fill="transparent"
											stroke="DarkOrange"
											stroke-linecap="round"
											stroke-width="2">
										</path>
									</g>
									<g>
										<g
											transform="translate(50, 50)">
											<g>
												<rect
													fill="#FFFF80"
													height="100"
													rx="10"
													stroke="black"
													stroke-width="2"
													width="100">
												</rect>
												<text
													fill="black"
													font-size="50"
													text-anchor="middle"
													x="50"
													y="62.5">
													add
												</text>
											</g>
											<circle
												cx="33.333332"
												cy="0"
												fill="white"
												r="4"
												stroke="black"
												stroke-width="2">
											</circle>
											<circle
												cx="66.666664"
												cy="0"
												fill="white"
												r="4"
												stroke="black"
												stroke-width="2">
											</circle>
											<circle
												cx="50"
												cy="100"
												fill="white"
												r="4"
												stroke="black"
												stroke-width="2">
											</circle>
										</g>
										<g
											transform="translate(200, 50)">
											<g>
												<rect
													fill="#FFFF80"
													height="100"
													rx="10"
													stroke="black"
													stroke-width="2"
													width="100">
												</rect>
												<text
													fill="black"
													font-size="50"
													text-anchor="middle"
													x="50"
													y="62.5">
													true
												</text>
											</g>
											<circle
												cx="50"
												cy="100"
												fill="white"
												r="4"
												stroke="black"
												stroke-width="2">
											</circle>
										</g>
									</g>
									<g>
										<circle
											cx="116.666664"
											cy="0"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
										<circle
											cx="233.33333"
											cy="0"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
									</g>
									<g>
										<circle
											cx="87.5"
											cy="200"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
										<circle
											cx="175"
											cy="200"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
										<circle
											cx="262.5"
											cy="200"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
									</g>
								</g>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="200"
									y="100">
									true
								</text>
							</g>
							<g>
								<g
									transform="translate(400, 125)">
									<rect
										fill="white"
										height="200"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="200">
									</rect>
									<g>
										<path
											d="M 66.666664 0V 157.5Q 66.666664 167.5 58.333332 167.5H 58.333332Q 50 167.5 50 177.5V 200"
											fill="transparent"
											stroke="Teal"
											stroke-linecap="round"
											stroke-width="2">
										</path>
										<path
											d="M 133.33333 0V 172.5Q 133.33333 182.5 141.66666 182.5H 141.66666Q 150 182.5 150 192.5V 200"
											fill="transparent"
											stroke="SlateBlue"
											stroke-linecap="round"
											stroke-width="2">
										</path>
										<path
											d="M 100 150V 165Q 100 175 100 175H 100Q 100 175 100 185V 200"
											fill="transparent"
											stroke="Purple"
											stroke-linecap="round"
											stroke-width="2">
										</path>
									</g>
									<g>
										<g
											transform="translate(50, 50)">
											<g>
												<rect
													fill="#FFFF80"
													height="100"
													rx="10"
													stroke="black"
													stroke-width="2"
													width="100">
												</rect>
												<text
													fill="black"
													font-size="50"
													text-anchor="middle"
													x="50"
													y="62.5">
													false
												</text>
											</g>
											<circle
												cx="50"
												cy="100"
												fill="white"
												r="4"
												stroke="black"
												stroke-width="2">
											</circle>
										</g>
									</g>
									<g>
										<circle
											cx="66.666664"
											cy="0"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
										<circle
											cx="133.33333"
											cy="0"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
									</g>
									<g>
										<circle
											cx="50"
											cy="200"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
										<circle
											cx="100"
											cy="200"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
										<circle
											cx="150"
											cy="200"
											fill="white"
											r="4"
											stroke="black"
											stroke-width="2">
										</circle>
									</g>
								</g>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="500"
									y="100">
									false
								</text>
							</g>
							<circle
								cx="156.25"
								cy="0"
								fill="black"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="312.5"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="468.75"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="156.25"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="312.5"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="468.75"
								cy="350"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<g>
						<circle
							cx="218.75"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="437.5"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="656.25"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
					<g>
						<circle
							cx="175"
							cy="600"
							fill="black"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="350"
							cy="600"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="525"
							cy="600"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="700"
							cy="600"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
				</g>
				<circle
					cx="243.75"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="462.5"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="681.25"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="375"
					cy="700"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="550"
					cy="700"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="725"
					cy="700"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(1325, 950)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						print
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="491.66666"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
			<circle
				cx="983.3333"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="737.5"
				cy="1100"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>
